[package]
name = "cni-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ipnetwork = "0.20.0"
log = "0.4.20"
macaddr = "1.0.1"
serde = { version = "1.0.189" ,features = ["derive"]}
serde_json = "1.0.107"
simplelog = "0.12.1"
thiserror = { version = "1.0.49"}



