[package]
name = "static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cni-core = {  path = "../cni-core" }
ipnetwork = "0.20.0"
log = "0.4.20"
serde_json = "1.0.107"
simplelog = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
anyhow = "1.0.75"
